Add all project files

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -70,9 +70,11 @@
      <url-pattern>/Delete Tickets</url-pattern>
    </servlet-mapping>
    
+   
+   
    <servlet>
      <servlet-name>BookingHistoryServlet</servlet-name>
-     <servlet-class>com.idiot.BookigHistoryServlet</servlet-class>
+     <servlet-class>com.idiot.BookingHistoryServlet</servlet-class>
    </servlet>
    
    <servlet-mapping>
