Refactoring the servlets

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -87,7 +87,7 @@
     </listener>
   
   <welcome-file-list>
-    <welcome-file>HomePageServlet</welcome-file>
+    <welcome-file>HomePage.html</welcome-file>
   </welcome-file-list>
   
    
