--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/manos/Desktop/mysql-connector-j-8.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/manos/Downloads/jakarta.jakartaee-api-10.0.0-javadoc.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
